[gd_scene load_steps=9 format=3 uid="uid://crdju1xafvwgj"]

[ext_resource type="Script" uid="uid://utgjnyop5hmp" path="res://characters/Base/base_character.gd" id="1_5df2l"]
[ext_resource type="Script" uid="uid://2xg8b3kkqhxc" path="res://characters/character_animator.gd" id="2_drka6"]
[ext_resource type="Script" uid="uid://dj4cf7yitoal3" path="res://combat/hurtbox_3d.gd" id="4_4ts41"]
[ext_resource type="Script" uid="uid://bpftxo20renih" path="res://combat/hitbox_3d.gd" id="5_q1v0g"]
[ext_resource type="Script" uid="uid://cnm60jtnrmltc" path="res://characters/stats.gd" id="11_a2t2k"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_k7a2e"]
radius = 0.3
height = 1.6

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q1v0g"]
height = 1.6

[sub_resource type="BoxShape3D" id="BoxShape3D_4ts41"]
size = Vector3(0.8, 1.6, 1.5)

[node name="BaseCharacter" type="CharacterBody3D" groups=["base_character"]]
script = ExtResource("1_5df2l")
walk_speed = null
strafe_speed = null
backpedal_speed = null
run_speed = null
turn_speed_deg = null
use_gravity = null
round_active = null
keep_eyes_on_target = null
approach_speed_scale = null
attack_library_path = null
attack_set_data_path = null
attack_debounce_after_fight_enter = null
launch_band_epsilon = null
attack_press_retry_buffer_sec = null
attack_queue_buffer_sec = null
navigation_agent_path = null
stats_node_path = null
animator_path = null
use_agent_autopilot = null
move_arrival_tolerance = null
run_distance_threshold = null
nav_clamp_targets = null
nav_stuck_memory_frames = null
debug_enabled = null
debug_interval = null
input_source_id = null
accept_any_source_if_zero = null
use_force_ranges = null
light_force_min = null
light_force_max = null
medium_force_min = null
medium_force_max = null
heavy_force_min = null
heavy_force_max = null
special_force_min = null
special_force_max = null
category_light = null
category_medium = null
category_heavy = null
category_special = null
scale_damage_by_force = null
min_damage_scale = null
max_damage_scale = null
default_light_damage = null
default_medium_damage = null
default_heavy_damage = null
default_special_damage = null
auto_target_enabled = null
auto_target_reacquire_interval = null
aggro_memory_sec = null
switch_to_aggressor_immediately = null
auto_fight_movement_enabled = null
arena_center = null
arena_radius_hint = null
idle_strafe_interval_min = null
idle_strafe_interval_max = null
idle_strafe_magnitude = null
swing_forward_push = null
retreat_recent_hit_window = null
retreat_hit_threshold = null
retreat_push = null
center_return_bias = null
hold_distance = null
hold_tolerance = null
post_swing_backstep_sec = null
post_swing_backstep_strength = null
strafe_angle_min_deg = null
strafe_activity_prob = null
strafe_on_time_min = null
strafe_on_time_max = null
strafe_off_time_min = null
strafe_off_time_max = null
strafe_magnitude_min = null
strafe_magnitude_max = null
strafe_speed_scale_min = null
strafe_speed_scale_max = null
rotate_instead_on_target_strafe = null
target_strafe_omega_thresh_deg = null
approaching_speed_threshold = null
retreat_when_pressed_slowdown = null
hold_ground_chance_when_pressed = null
retreat_speed_scale = null
retreat_max_mag = null
center_seek_enabled = null
center_seek_strength = null
engage_slowdown_band_m = null
engage_forward_speed_scale = null
engage_backoff_m = null
standoff_hysteresis_m = null
standoff_pause_sec = null
rush_timeout_sec = null
reaction_lag_sec = null
retreat_memory_sec = null
retreating_speed_threshold = null
rush_trigger_small_margin_m = null
rush_trigger_min_time_sec = null
random_bait_backstep_prob = null
bait_backstep_min_sec = null
bait_backstep_max_sec = null
bait_backstep_mag = null
band_correction_gain = null
band_deadzone_m = null
step_back_min_sec = null
step_back_max_sec = null
step_in_min_sec = null
step_in_max_sec = null
step_back_mag = null
step_in_mag = null
attack_window_sec = null
consume_window_on_combo = null
consume_window_on_basic = null
combo_finalize_gap_sec = null
knockback_duration_sec = null
hitstun_immunity_while_ko = null
debug_combat = null

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_k7a2e")

[node name="Model" type="Node3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CharacterAnimator" type="Node" parent="."]
script = ExtResource("2_drka6")
model_root_path = NodePath("../Model")

[node name="Stats" type="Node" parent="."]
script = ExtResource("11_a2t2k")

[node name="Hurtbox3D" type="Area3D" parent="." node_paths=PackedStringArray("owner_character")]
collision_layer = 4
collision_mask = 2
script = ExtResource("4_4ts41")
owner_character = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox3D"]
shape = SubResource("CapsuleShape3D_q1v0g")

[node name="Hitbox3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("5_q1v0g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.75)
shape = SubResource("BoxShape3D_4ts41")
